# snake-c-sdl2

./: CMakeLists.txt  Map.c  Map.h  README.md  game.c  game.h  main.c  player.c  player.h
